--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,17 @@
     <string name="join">Join</string>
     <string name="logout">Logout</string>
     <string name="title_activity_map_tracking">Map</string>
+    <string name="dog_name">Dog Name</string>
+    <string name="owner">Owner</string>
+    <string name="breed">Breed</string>
+    <string name="s">S</string>
+    <string name="size">Size</string>
+    <string name="m">M</string>
+    <string name="l">L</string>
+    <string name="mating">Mating</string>
+    <string name="color">Color</string>
+    <string name="age">Age</string>
+    <string name="register_dog">Register Dog</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
 </resources>
