--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="register_dog">Register Dog</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
+    <string name="owner_mail">Owner\'s email</string>
 </resources>
