--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,25 @@
 <resources>
     <string name="app_name">RealTimeLocating</string>
-    <string name="login">Login</string>
-    <string name="test_mail">test@gmail.com</string>
-    <string name="join">Join</string>
-    <string name="logout">Logout</string>
-    <string name="title_activity_map_tracking">Map</string>
+    <string name="e_mail">E-mail</string>
+    <string name="password">Password</string>
+    <string name="next">Next</string>
     <string name="dog_name">Dog Name</string>
-    <string name="owner">Owner</string>
+    <string name="email_owner">Email Owner</string>
     <string name="breed">Breed</string>
-    <string name="s">S</string>
+    <string name="small">Small</string>
     <string name="size">Size</string>
-    <string name="m">M</string>
-    <string name="l">L</string>
-    <string name="mating">Mating</string>
-    <string name="color">Color</string>
-    <string name="age">Age</string>
-    <string name="register_dog">Register Dog</string>
-    <string name="no">No</string>
+    <string name="medium">Medium</string>
+    <string name="big">Big</string>
+    <string name="mate">Mate</string>
     <string name="yes">Yes</string>
-    <string name="owner_mail">Owner\'s email</string>
+    <string name="register">Register</string>
+    <string name="age">Age</string>
+    <string name="color">Color</string>
+    <string name="no">No</string>
+    <string name="login">Login</string>
+    <string name="registerText">Don\'t have an account ? Register !</string>
+    <string name="test_gmail_com">test@gmail.com</string>
+    <string name="join">Join</string>
+    <string name="logoutMenu">Logout</string>
+    <string name="see_dog_profile">See Dog Profile</string>
 </resources>
